fix: prevent table word-wrap

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,10 @@ body {
     min-height: 100%;
 }
 
+td {
+    white-space: nowrap;
+}
+
 .container {
     width: 100%;
 }
